--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
+<section>
+  <div class="icons-container">
+    <button mat-fab aria-label="Example icon button with a delete icon">
+      <mat-icon>notifications</mat-icon>
+    </button>
+    <button
+      mat-fab
+      aria-label="Example icon button with a delete icon"
+      style="margin-left: auto"
+    >
+      <mat-icon>menu</mat-icon>
+    </button>
+  </div>
+</section>
 <router-outlet></router-outlet>
