--- a/src/app/components/patient/list-of-features/list-of-features.component.html
+++ b/src/app/components/patient/list-of-features/list-of-features.component.html
@@ -2,18 +2,7 @@
   <div class="card-img">
     <img src="https://placehold.co/400" alt="Photo of a Shiba Inu" />
   </div>
-  <div class="card-content">
-    <h2>Augusto Cianciangulla</h2>
-    <p>
-      This is the therapist you selected. <br />
-      When you set a page "shared" it will be accessible to him/her as well.
-      <br />
-      You can change this page setting at any time. <br />
-      You will also be able to change your therapist if necessary. In this case
-      the previous therapist will lose access to previously shared pages. <br />
-    </p>
-    <button mat-flat-button>Change your therapist</button>
-  </div>
+  <app-therapist-card></app-therapist-card>
 </section>
 <div class="list-of-patients-container">
   <mat-card class="example-card" appearance="outlined">
