therapist card and lists of all therapists components completed.

--- a/src/app/components/patient/list-of-all-therapists/list-of-all-therapists.component.html
+++ b/src/app/components/patient/list-of-all-therapists/list-of-all-therapists.component.html
@@ -1,11 +1,19 @@
 <div *ngIf="therapistsList.length > 0; else loading">
   <div class="therapists-list">
     <div *ngFor="let therapist of therapistsList" class="card-content">
-      <h2>
+      <p class="tp-name" title="{{ therapist.name }} {{ therapist.surname }}">
         {{therapist ? `${therapist.name} ${therapist.surname}` : 'Unable to receive therapist data.'}}
-      </h2>
-      <button mat-flat-button>Select this therapist</button>
+      </p>
+      <button
+        mat-flat-button
+        (click)="selectTherapist(therapist.id)"
+        class="selection-btn"
+      >
+        Select this therapist
+      </button>
     </div>
   </div>
 </div>
-<ng-template #loading></ng-template>
+<ng-template #loading>
+  <mat-progress-bar mode="query"></mat-progress-bar>
+</ng-template>
