--- a/src/app/components/utilities/overlay-container/overlay-container.component.html
+++ b/src/app/components/utilities/overlay-container/overlay-container.component.html
@@ -1,5 +1,5 @@
 <div class="screen-overlay" (click)="toggleVisibility()">
   <div class="container" (click)="$event.stopPropagation()">
-    <ng-content></ng-content>
+    <ng-content (toggleVisibility)="toggleVisibility()"></ng-content>
   </div>
 </div>
