--- a/src/app/components/patient/list-of-all-therapists/list-of-all-therapists.component.scss
+++ b/src/app/components/patient/list-of-all-therapists/list-of-all-therapists.component.scss
@@ -1,6 +1,6 @@
 .therapists-list {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
   width: 100%;
@@ -11,6 +11,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   width: 40%;
+  min-height: 200px;
+  max-height: 30vh;
+  .tp-name {
+    min-height: 58px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-clamp: 2;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
 }
