--- a/src/app/components/utilities/overlay-container/overlay-container.component.scss
+++ b/src/app/components/utilities/overlay-container/overlay-container.component.scss
@@ -16,6 +16,7 @@
     z-index: 11;
     width: 80vw;
     height: 90vh;
+    padding-left: 5px;
     background-color: white;
     overflow-y: auto;
     border-radius: 15px;
