Fixed better therapist-card, added svg icons, added beta diary / quill component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section>
-  <div class="icons-container">
+  <div class="nav-container">
     <button mat-fab aria-label="Example icon button with a delete icon">
       <mat-icon>notifications</mat-icon>
     </button>
