--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
-.icons-container {
+.nav-container {
   box-sizing: border-box;
   width: 100%;
-  padding: 12px 5px;
+  padding: 10px 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
