--- a/src/app/components/patient/list-of-features/list-of-features.component.scss
+++ b/src/app/components/patient/list-of-features/list-of-features.component.scss
@@ -4,16 +4,37 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-}
-.example-card {
-  width: 40%;
-  margin: 10px;
-  img {
-    border-radius: 100%;
+  .tp-card {
+    width: 90vw;
     padding: 5px;
   }
-}
-.card {
-  width: 90vw;
-  padding: 5px;
+  .feature-card {
+    width: 40%;
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    cursor: pointer;
+    .icon-container {
+      margin: 15px;
+      background-color: white;
+      width: 30vw;
+      height: 30vw;
+      border-radius: 50%;
+      align-self: center;
+      box-shadow: 2px 2px 3px lightgrey;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .feature-icon {
+        width: 22vw;
+        height: 22vw;
+      }
+    }
+    img {
+      border-radius: 100%;
+      padding: 5px;
+    }
+  }
 }
