--- a/src/app/components/utilities/overlay-container/overlay-container.component.scss
+++ b/src/app/components/utilities/overlay-container/overlay-container.component.scss
@@ -19,6 +19,6 @@
     padding-left: 5px;
     background-color: white;
     overflow-y: auto;
-    border-radius: 15px;
+    border-radius: 15px 0 0 15px;
   }
 }
