Changed is-authenticated guard to logout if the user has the role patient and doesn't have a therapist_id saved in the session storage

--- a/src/app/components/patient/therapist-card/therapist-card.component.html
+++ b/src/app/components/patient/therapist-card/therapist-card.component.html
@@ -1,12 +1,20 @@
-<button (click)="callback()" style="z-index: 20">BOIA</button>
 <div class="card-content">
   <div class="img-container">
     <mat-icon
+      *ngIf="therapistId && therapistId > 0; else searchBlock"
       class="tp-img"
       svgIcon="face"
       aria-hidden="false"
       aria-label="person icon"
     ></mat-icon>
+    <ng-template #searchBlock>
+      <mat-icon
+        class="tp-img"
+        svgIcon="person-search"
+        aria-hidden="false"
+        aria-label="person icon"
+      ></mat-icon>
+    </ng-template>
   </div>
 
   <div [ngSwitch]="therapistId">
