--- a/src/app/components/patient/therapist-card/therapist-card.component.scss
+++ b/src/app/components/patient/therapist-card/therapist-card.component.scss
@@ -1,6 +1,7 @@
 .card-content {
   display: flex;
   flex-direction: column;
+  padding: 10px;
   .img-container {
     background-color: white;
     border-radius: 50%;
