beta patient-main-page completed

--- a/src/app/components/patient/diary/diary.component.html
+++ b/src/app/components/patient/diary/diary.component.html
@@ -1,6 +1,1 @@
-<p>
-  Welcome to your personal diary.<br />
-  This page is dedicated to notes that you want to keep on hand. It will never
-  be shared with your therapist; it is for your exclusive use.
-</p>
-<app-quill-text-editor></app-quill-text-editor>
+<app-note-viewer [note]="note"></app-note-viewer>
