--- a/src/app/components/patient/list-of-features/list-of-features.component.html
+++ b/src/app/components/patient/list-of-features/list-of-features.component.html
@@ -41,7 +41,7 @@
   <mat-card
     class="feature-card card-theme"
     appearance="outlined"
-    [routerLink]="['daily-note']"
+    (click)="dailyNoteConfirm()"
     routerLinkActive="router-link-active"
   >
     <div class="icon-container">
