--- a/src/app/components/patient/calendar/calendar.component.html
+++ b/src/app/components/patient/calendar/calendar.component.html
@@ -1,1 +1,115 @@
-<p>calendar works!</p>
+<p>
+  Welcome to your calendar.<br />
+  Here you can see all the notes taken so far. It is possible to sort them by
+  title or date.
+</p>
+
+<app-search-bar (filterSearch)="filterSearch($event)"></app-search-bar>
+
+<div class="note-list">
+  <table mat-table [dataSource]="notesList" matSort>
+    <!-- Title Column -->
+    <ng-container matColumnDef="title">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by title"
+      >
+        Title
+      </th>
+      <td mat-cell *matCellDef="let note">{{ note.title }}</td>
+    </ng-container>
+
+    <!-- Tags Column -->
+    <ng-container matColumnDef="tags">
+      <th mat-header-cell *matHeaderCellDef>Tags</th>
+      <td
+        mat-cell
+        *matCellDef="let note"
+        [ngStyle]="{ color: !note.tags ? 'lightgray' : '' }"
+      >
+        <mat-chip-set *ngIf="note.tags; else noTags">
+          <mat-chip *ngFor="let tag of note.tags">
+            {{ tag.name }}
+          </mat-chip>
+        </mat-chip-set>
+        <ng-template #noTags> "No tags avaliable" </ng-template>
+      </td>
+    </ng-container>
+
+    <!-- Date Column -->
+    <ng-container matColumnDef="date">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by date"
+      >
+        Date
+      </th>
+      <td mat-cell *matCellDef="let note">
+        {{ note.date | date : "short" }}
+      </td></ng-container
+    >
+
+    <!-- Shared Column -->
+    <ng-container matColumnDef="shared">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        sortActionDescription="Sort by date"
+      >
+        Shared
+      </th>
+      <td mat-cell *matCellDef="let note">
+        <button
+          mat-icon-button
+          aria-label="Example icon button with a vertical three dot icon"
+          (click)="changeNoteVisibility(note)"
+          [disabled]="note.id == 1"
+          [ngStyle]="{
+            color: note.shared ? 'rgb(255, 120, 80)' : ''
+          }"
+        >
+          <!-- AGGIORNA VIEW QUANDO CAMBI LA VISIBILITÀ DI UNA NOTA! CAMBIA ANCHE IL COLORE! RICORDATI DI AGGIUNGERE UN MODO PER ELIMINARE LE NOTE! -->
+          <mat-icon>{{ note.shared ? "toggle_on" : "toggle_off" }}</mat-icon>
+        </button>
+      </td></ng-container
+    >
+
+    <!-- Modify Column -->
+    <ng-container matColumnDef="view">
+      <th mat-header-cell *matHeaderCellDef>Open</th>
+      <td mat-cell *matCellDef="let note">
+        <button
+          mat-icon-button
+          aria-label="Edit icon"
+          [disabled]="note.id == 1"
+          (click)="openNote(note)"
+        >
+          <mat-icon>article</mat-icon>
+        </button>
+      </td></ng-container
+    >
+
+    <!-- Delete Column -->
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef>Delete</th>
+      <td mat-cell *matCellDef="let note">
+        <button
+          mat-icon-button
+          aria-label="Delete icon"
+          (click)="deleteNote(note)"
+          [disabled]="note.id == 1"
+        >
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td></ng-container
+    >
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
