Updated daily-note and list-of-feature components implementing the note-viewer component

--- a/src/app/components/therapist/list-of-patients/list-of-patients.component.scss
+++ b/src/app/components/therapist/list-of-patients/list-of-patients.component.scss
@@ -1,8 +1,8 @@
-.list-of-patients-container {
+.list-of-patients {
   padding: 10px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
 }
 .example-card {
